--- a/mkdocs/overrides/main.html
+++ b/mkdocs/overrides/main.html
@@ -5,7 +5,7 @@
     <a href="{{ page.nb_url }}" title="Download Notebook" class="md-content__button md-icon">
         {% include ".icons/material/download.svg" %}
     </a>
-    <a href="{{ config.extra.colab_base_url }}{{ page.nb_url }}"
+    <a href="{{ config.extra.colab_base_url }}{{ page.url }}{{ page.file.src_uri | basename | quote }}"
        title="Open Notebook in Google Colab" class="md-content__button md-icon">
         {% include ".icons/material/play-circle-outline.svg" %}
     </a>
