--- a/mkdocs/overrides/main.html
+++ b/mkdocs/overrides/main.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 {% if page.nb_url %}
-    <a href="{{ page.nb_url }}" title="Download Notebook" class="md-content__button md-icon">
+    <a href="{{ page.canonical_url }}{{ page.file.src_uri | basename | quote }}" title="Download Notebook"
+       class="md-content__button md-icon">
         {% include ".icons/material/download.svg" %}
     </a>
     <a href="{{ config.extra.colab_base_url }}{{ page.url }}{{ page.file.src_uri | basename | quote }}"
